Fix display issue with long category lists
This sets a max height and overflow scrolling to the header navigation lists to prevent long lists from getting cut off

--- a/source/stylesheets/layout.css.scss
+++ b/source/stylesheets/layout.css.scss
@@ -369,6 +369,8 @@ header .inner {
   overflow: hidden;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  max-height: 50vh;
+  overflow-y: scroll;
 }
 .nav-main > ul > li.active .dropdown {
   visibility: visible;
